remove AutoOneOf, AutoAnnotation, SerializableAutoValue, ToPrettyString